this is longge's new file

--- a/app.json
+++ b/app.json
@@ -22,7 +22,8 @@
     "pages/search/search",
     "pages/CreateRoom/CreateRoom",
     "pages/FindRoom/FindRoom",
-    "components/BackTitle/BackTitle"
+    "components/BackTitle/BackTitle",
+    "components/LogBindTap/LogBindTap"
   ],
   "window": {
     "backgroundColor": "#0081ff",
